# noesis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  NEXT_ACTIONS.md  README.md  ROADMAP.md  SECURITY.md  VERDICT.md  pyproject.toml  roadmap.md
app/: __init__.py  api.py  models.py  services.py
cme/: __init__.py  adaptive.py  benchmark.py  benchmark_v6.py  benchmark_v7.py  benchmark_v8.py  bottleneck_plan.py  broadcast.py  causal.py  cli.py  cluster_quality.py  collapse_controller.py  complexity.py  dimensionality.py  eiic.py  engine.py  entropy_budget.py  entropy_ledger.py  evidence.py  forbidden.py  generators.py  graph.py  iev_bandwidth.py  intent_vector.py  latency_profile.py  models.py  neuro.py  node_plan.py  node_profile.py  ontology.py  pipeline.py  pipeline_v5.py  pipeline_v6.py  pipeline_v7.py  pipeline_v8.py  precision_gate.py  precision_scheduler.py  provenance.py  registry.py  synthesis.py  (+4 more)
data/: action_potential_trace.example.json  bibliography.bib  claim_source_ledger.json  discrimination_study.json  feedback_pairs.example.json  forbidden_claims.json  physics_boundary_contract.json  physics_boundary_report.json  source_graph.json  sources.json  theory_vocabulary.json  validity_gate.json
docs/: ABLATION_V2.md  ACTION_POTENTIAL_TRACE.md  ADAPTIVE_COMPRESSION.md  ARCHITECTURE.md  BENCHMARK.md  BIBLIOGRAPHIC_EVIDENCE_GRAPH.md  BIBLIOGRAPHY.md  CAUSAL_CATEGORY_LAYER.md  CITATION_POLICY.md  CLAIM_GOVERNANCE.md  CLAIM_SOURCE_LEDGER.md  CLUSTER_QUALITY_METRICS.md  CME_V06_ARCHITECTURE.md  COGNITIVE_DIMENSIONALITY.md  COLLAPSE_CONTROLLER.md  DISCHARGE_GATE.md  DISTRIBUTED_COGNITIVE_GRAPH.md  ENTROPY_DELEGATION.md  ENTROPY_EXPANSION_COLLAPSE.md  EVIDENCE_INTEGRAL.md  EXAMPLES.md  EXTERNALIZED_ACTIVE_INFERENCE.md  FAILURE_WEIGHTED_BENCHMARK.md  FEEDBACK_HARNESS.md  FIRST_PRINCIPLES.md  FRACTAL_GATE_CONSISTENCY.md  GNWT_OPERATIONAL_ANALOGY.md  HUMAN_BOTTLENECK.md  HUMAN_EVALUATION.md  IEV_BANDWIDTH.md  IEV_PRECISION_GATE.md  LATENCY_ASYMMETRY.md  METHODOLOGY.md  METHODS.md  METRICS_INFERENCE.md  NAME.md  NODE_DIVERSITY.md  ONTOLOGY.md  OVERCLAIM_GUARDRAILS.md  PHYSICS_BOUNDARY_AUDIT.md  (+22 more)
examples/: README.md
formal/: __init__.py  constructs.py  metrics.py  verify.py
noesis/: __init__.py  adaptive.py  benchmark.py  benchmark_v6.py  benchmark_v7.py  benchmark_v8.py  bibliography.py  bottleneck_plan.py  broadcast.py  calibration.py  causal.py  cli.py  cluster_quality.py  collapse_controller.py  dimensionality.py  effective_dim.py  eiic.py  engine.py  entropy_budget.py  entropy_ledger.py  evidence_integral.py  feedback.py  forbidden.py  gate_functional.py  generators.py  human_eval.py  iev_bandwidth.py  intent_vector.py  latency_profile.py  models.py  neuro.py  node_plan.py  ontology.py  pipeline.py  pipeline_core.py  pipeline_v5.py  pipeline_v6.py  pipeline_v7.py  pipeline_v8.py  precision_gate.py  (+10 more)
prompts/: artifact_builder.md  cognitive_expander.md  finalizer_mirror.md  introspection_engine.md  reverse_inference_engine.md
schemas/: ablation_report.schema.json  action_decision.schema.json  action_potential_trace.schema.json  artifact.schema.json  bottleneck_reduction_plan.schema.json  broadcast_trace.schema.json  (+48 more)
(+121 files in other folders)
