[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-mirror-methods"
version = "0.1.0"
description = "Практичний brain-inspired репозиторій методів мислення з LLM-дзеркалом."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yaroslav Vasylenko", email = "neuron7x@ukr.net" }]
keywords = ["llm", "metacognition", "reflection", "introspection", "reverse-inference", "exocortex"]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
serve = ["uvicorn>=0.27"]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
finalizer100 = "tools.finalizer100:main"
cmm-pipeline = "tools.pipeline:main"

[tool.setuptools]
packages = ["tools", "app", "formal"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["tools", "app", "formal"]
