[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noesis"
version = "0.8.0"
description = "Noesis — externalized metacognition with an IEV precision gate (w = αR + βV + γP − δK ≥ θ)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yaroslav Vasylenko", email = "neuron7x@ukr.net" }]
keywords = ["llm", "metacognition", "reflection", "introspection", "reverse-inference", "exocortex", "active-inference", "precision-gate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
serve = ["uvicorn>=0.27"]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.5", "mypy>=1.8", "types-jsonschema>=4.0"]

[project.scripts]
finalizer100 = "tools.finalizer100:main"
cmm-pipeline = "tools.pipeline:main"
noesis = "noesis.cli:main"

[tool.setuptools]
packages = ["tools", "app", "formal", "noesis"]

[tool.setuptools.package-data]
noesis = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=noesis --cov=app --cov=formal --cov=tools --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "raise SystemExit", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["tools", "app", "formal", "noesis"]

# anthropic — optional [llm] extra; absent in default/dev installs and CI.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true
